Updating css and content

--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -12,7 +12,10 @@ topmenu:
 
 - title: Blog
   url: "blog/"
-  
+
+# - title: Aquileo en el parque
+#  url: "aquileo/"
+
 - title: Contacto
   url: "contacto/"
 
